# c-tdd-starter

./: .gitignore  Doxyfile  README.md  makebuild.sh
docs/source/: index.md
source/: CMakeLists.txt  lib.c  main.c
source/exe/: CMakeLists.txt
source/exe/src/: main.c
source/lib/: CMakeLists.txt
source/lib/inc/: lib.h
source/lib/src/: lib.c
